--- a/src/recipe-details.html
+++ b/src/recipe-details.html
@@ -1,5 +1,5 @@
 <!--
-    Copyright (c) 2016-2017, Randy Westlund. All rights reserved.
+    Copyright (c) 2016-2018, Randy Westlund. All rights reserved.
     This code is under the BSD-2-Clause license.
 -->
 <!-- This module allows editing of a recipe. -->
@@ -14,10 +14,12 @@
 <link rel="import" href="../bc/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../bc/paper-spinner/paper-spinner.html">
 <link rel="import" href="../bc/paper-styles/element-styles/paper-material-styles.html">
-<link rel="import" href="../bc/polymer/polymer.html">
+<link rel="import" href="../bc/polymer/lib/elements/dom-if.html">
+<link rel="import" href="../bc/polymer/lib/elements/dom-repeat.html">
+<link rel="import" href="../bc/polymer/lib/mixins/gesture-event-listeners.html">
 
 <link rel="import" href="cookie-display.html">
-<link rel="import" href="global-behavior.html">
+<link rel="import" href="recipes-element.html">
 <link rel="import" href="global-styles.html">
 
 <dom-module id="recipe-details">
@@ -226,157 +228,150 @@
         </paper-dialog>
     </template>
 
-    <script>
-        (function() {
-            'use strict';
-            Polymer({
-                is: 'recipe-details',
-                behaviors: [ recipe_behaviors.global_behavior, ],
-                properties: {
-                    recipeId: {
-                        type: String,
-                        observer: "recipe_changed",
-                    },
-                    // Holds the recipe we load in.
-                    recipe: {
-                        type: Object,
-                    },
-                    loading: {
-                        type: Object,
-                        value: {
-                            get_item:       false,
-                            delete_item:    false,
-                            put_item:       false,
-                        },
-                    },
-                    // True whenever we're loading XHR data.
-                    loading_data: {
-                        type: Boolean,
-                        computed: "compute_loading_data(loading.*)",
-                    },
+<script>
+class RecipeDetails extends Polymer.GestureEventListeners(Recipes.Element) {
+    static get is() { return "recipe-details"; }
+    static properties() {
+        return {
+            recipeId: { type: String, observer: "recipe_changed" },
+            // Holds the recipe we load in.
+            recipe: { type: Object },
+            loading: {
+                type: Object,
+                value: {
+                    get_item:       false,
+                    delete_item:    false,
+                    put_item:       false,
                 },
-                // Make app-grid update properly.
-                attached: function() {
-                    window.addEventListener("resize", () => this.updateStyles());
-                },
-                /* Loading is true if any flags in it are true. */
-                compute_loading_data: function(loading) {
-                    var ret = false;
-                    Object.keys(this.loading)
-                        .forEach( v => ret = ret || this.loading[v] );
-                    return ret;
-                },
-                // Clear these out to prevent showing old data.
-                recipe_changed: function() {
-                    // TODO this doesn't clear the selected fields.
-                    this.selected_tag = null;
-                    this.typed_tag = null;
-                    this.selected_recipe = null;
-                },
-                // Users may edit this recipe if they are an Admin,
-                // Modererator, or the User who owns it.
-                allow_recipe_edit: function(role, user_id, author_id) {
-                    return this.is_moderator(role) ||
-                        (this.is_user(role) && Number(user_id) === author_id);
-                },
-                edit_recipe: function() {
-                    this.recipe_to_edit = JSON.parse(JSON.stringify(this.recipe));
-                    window.dispatchEvent(new CustomEvent("open-form", {
-                        detail: {
-                            name:   "edit_recipe_form",
-                            recipe: this.recipe_to_edit,
-                            that:   this,
-                        }
-                    }));
-                },
-                edit_ingredients: function() {
-                    this.recipe_to_edit = JSON.parse(JSON.stringify(this.recipe));
-                    window.dispatchEvent(new CustomEvent("open-form", {
-                        detail: {
-                            name:   "edit_ingredients_form",
-                            recipe: this.recipe_to_edit,
-                            that:   this,
-                        }
-                    }));
-                },
-                edit_directions: function() {
-                    this.recipe_to_edit = JSON.parse(JSON.stringify(this.recipe));
-                    window.dispatchEvent(new CustomEvent("open-form", {
-                        detail: {
-                            name:   "edit_directions_form",
-                            recipe: this.recipe_to_edit,
-                            that:   this,
-                        }
-                    }));
-                },
-                edit_info: function() {
-                    this.recipe_to_edit = JSON.parse(JSON.stringify(this.recipe));
-                    window.dispatchEvent(new CustomEvent("open-form", {
-                        detail: {
-                            name:   "edit_recipe_info_form",
-                            recipe: this.recipe_to_edit,
-                            that:   this,
-                        }
-                    }));
-                },
-                edit_linked: function() {
-                    this.recipe_to_edit = JSON.parse(JSON.stringify(this.recipe));
-                    window.dispatchEvent(new CustomEvent("open-form", {
-                        detail: {
-                            name:   "edit_linked_recipe_form",
-                            recipe: this.recipe_to_edit,
-                            that:   this,
-                        }
-                    }));
-                },
-                resolve_dialog: function(e, reason) {
-                    if (!reason.confirmed) return;
-                    this.$.put_item_ajax.generateRequest();
-                },
-                open_delete_modal: function() {
-                    this.$.delete_item_confirmation.open();
-                },
-                // Actually do it.
-                delete_item: function(e, reason) {
-                    if (reason.confirmed)
-                        this.$.delete_item_ajax.generateRequest();
-                },
-                put_item_failed: function() {
-                    window.dispatchEvent(new CustomEvent("error-toast", {
-                        detail: "Failed to save recipe :("
-                    }));
-                },
-                put_item_successful: function() {
-                    // Load the response into recipe_to_edit and copy it here to
-                    // prevent blanking the screen on a failed request.
-                    this.set("recipe", this.recipe_to_edit);
-                    window.dispatchEvent(new CustomEvent("success-toast", {
-                        detail: this.recipe.title + " saved"
-                    }));
-                },
-                delete_item_failed: function() {
-                    window.dispatchEvent(new CustomEvent("error-toast", {
-                        detail: "Failed to delete " + this.recipe.title + " :("
-                    }));
-                },
-                // Let the user know, then go back to the list of recipes.
-                delete_item_successful: function() {
-                    window.dispatchEvent(new CustomEvent("success-toast", {
-                        detail: this.recipe.title + " deleted"
-                    }));
-                    // Let the parent know that it should refresh its list.
-                    window.dispatchEvent(new CustomEvent("item-collection-refresh", {
-                        detail: "recipes"
-                    }));
-                    // Go back to the list.
-                    window.history.pushState({}, null, "/");
-                    window.dispatchEvent(new CustomEvent("location-changed"));
-                },
-                format_recipe_tags: function(tags) {
-                    if (!tags) return "";
-                    return tags.join(", ");
-                },
-            });
-        })();
-    </script>
+            },
+            // True whenever we're loading XHR data.
+            loading_data: {
+                type: Boolean,
+                computed: "compute_loading_data(loading.*)",
+            },
+        };
+    }
+    // Make app-grid update properly.
+    attached() {
+        window.addEventListener("resize", () => this.updateStyles());
+    }
+    // Loading is true if any flags in it are true.
+    compute_loading_data(loading) {
+        var ret = false;
+        Object.keys(this.loading)
+            .forEach( v => ret = ret || this.loading[v] );
+        return ret;
+    }
+    // Clear these out to prevent showing old data.
+    recipe_changed() {
+        // TODO this doesn't clear the selected fields.
+        this.selected_tag = null;
+        this.typed_tag = null;
+        this.selected_recipe = null;
+    }
+    // Users may edit this recipe if they are an Admin,
+    // Modererator, or the User who owns it.
+    allow_recipe_edit(role, user_id, author_id) {
+        return this.is_moderator(role) ||
+            (this.is_user(role) && Number(user_id) === author_id);
+    }
+    edit_recipe() {
+        this.recipe_to_edit = JSON.parse(JSON.stringify(this.recipe));
+        window.dispatchEvent(new CustomEvent("open-form", {
+            detail: {
+                name:   "edit_recipe_form",
+                recipe: this.recipe_to_edit,
+                that:   this,
+            }
+        }));
+    }
+    edit_ingredients() {
+        this.recipe_to_edit = JSON.parse(JSON.stringify(this.recipe));
+        window.dispatchEvent(new CustomEvent("open-form", {
+            detail: {
+                name:   "edit_ingredients_form",
+                recipe: this.recipe_to_edit,
+                that:   this,
+            }
+        }));
+    }
+    edit_directions() {
+        this.recipe_to_edit = JSON.parse(JSON.stringify(this.recipe));
+        window.dispatchEvent(new CustomEvent("open-form", {
+            detail: {
+                name:   "edit_directions_form",
+                recipe: this.recipe_to_edit,
+                that:   this,
+            }
+        }));
+    }
+    edit_info() {
+        this.recipe_to_edit = JSON.parse(JSON.stringify(this.recipe));
+        window.dispatchEvent(new CustomEvent("open-form", {
+            detail: {
+                name:   "edit_recipe_info_form",
+                recipe: this.recipe_to_edit,
+                that:   this,
+            }
+        }));
+    }
+    edit_linked() {
+        this.recipe_to_edit = JSON.parse(JSON.stringify(this.recipe));
+        window.dispatchEvent(new CustomEvent("open-form", {
+            detail: {
+                name:   "edit_linked_recipe_form",
+                recipe: this.recipe_to_edit,
+                that:   this,
+            }
+        }));
+    }
+    resolve_dialog(e, reason) {
+        if (!reason.confirmed) return;
+        this.$.put_item_ajax.generateRequest();
+    }
+    open_delete_modal() {
+        this.$.delete_item_confirmation.open();
+    }
+    // Actually do it.
+    delete_item(e, reason) {
+        if (reason.confirmed) this.$.delete_item_ajax.generateRequest();
+    }
+    put_item_failed() {
+        window.dispatchEvent(new CustomEvent("error-toast", {
+            detail: "Failed to save recipe :("
+        }));
+    }
+    put_item_successful() {
+        // Load the response into recipe_to_edit and copy it here to
+        // prevent blanking the screen on a failed request.
+        this.set("recipe", this.recipe_to_edit);
+        window.dispatchEvent(new CustomEvent("success-toast", {
+            detail: this.recipe.title + " saved"
+        }));
+    }
+    delete_item_failed() {
+        window.dispatchEvent(new CustomEvent("error-toast", {
+            detail: "Failed to delete " + this.recipe.title + " :("
+        }));
+    }
+    // Let the user know, then go back to the list of recipes.
+    delete_item_successful() {
+        window.dispatchEvent(new CustomEvent("success-toast", {
+            detail: this.recipe.title + " deleted"
+        }));
+        // Let the parent know that it should refresh its list.
+        window.dispatchEvent(new CustomEvent("item-collection-refresh", {
+            detail: "recipes"
+        }));
+        // Go back to the list.
+        window.history.pushState({}, null, "/");
+        window.dispatchEvent(new CustomEvent("location-changed"));
+    }
+    format_recipe_tags(tags) {
+        if (!tags) return "";
+        return tags.join(", ");
+    }
+}
+customElements.define(RecipeDetails.is, RecipeDetails);
+</script>
 </dom-module>
